feat: add email OTP verification and production CORS